# library

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  deny.toml  dev-reset.ps1  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: chordia-library.example.toml
deploy/: .env.example  README.md  chordia-library.prod.example.toml  compose.edge.yaml  compose.prod.yaml  init-letsencrypt.sh
deploy/nginx/templates/: library.conf.template
migrations/: 0001_init.sql  0002_content_addressed.sql  0003_track_extra_fields.sql  0004_hub_library_id.sql  0005_rich_metadata.sql  0006_dir_exclusions.sql  0007_organize.sql  0008_organize_templates.sql  0009_pending_scrobbles.sql  0010_loudness.sql  0011_loudness_attempts_and_freshness.sql  0012_normalize_catalog.sql
src/: auth.rs  catalog.rs  catalog_sync.rs  config.rs  dedupe.rs  directory.rs  error.rs  fingerprint.rs  index.rs  loudness.rs  main.rs  metadata.rs  organize.rs  pairing.rs  playback.rs  relay.rs  scanner.rs  scrobble.rs  streaming.rs  telemetry.rs  tls.rs  transcode.rs
src/api/: mod.rs  setup.rs
src/api/v1/: catalog.rs  health.rs  matcher.rs  mgmt.rs  mod.rs  pairing.rs  relay.rs  scrobbles.rs  stream.rs
src/http/: middleware.rs  mod.rs
